--- a/src/bcrhp/bcrhp/templates/views/components/search/search-export.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/search/search-export.htm
@@ -131,6 +131,7 @@
             ></input>
         </div>
         
+        {% comment %}
         <!-- 3. Report link -->
         <div class="instruction">
             <div class="search-export-instruction-h2 h2">
@@ -156,6 +157,7 @@
                     "
             ></div>
         </div>
+        {% endcomment %}
 
         <!-- Options if Celery is running -->
         <!-- ko if: ((total() > {{app_settings.SEARCH_EXPORT_IMMEDIATE_DOWNLOAD_THRESHOLD}} && celeryRunning() === "True") || (format() === "html" && total() > {{app_settings.SEARCH_EXPORT_IMMEDIATE_DOWNLOAD_THRESHOLD_HTML_FORMAT}} && celeryRunning() === "True")) && ("{{app_settings.RESTRICT_CELERY_EXPORT_FOR_ANONYMOUS_USER}}" === "False" || "{{app_settings.RESTRICT_CELERY_EXPORT_FOR_ANONYMOUS_USER}}" === "True" && "{{user.username}}" !== "anonymous")-->
