1036 - Fix list number

--- a/src/bcrhp/bcrhp/templates/views/components/search/search-export.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/search/search-export.htm
@@ -164,7 +164,7 @@
         <div>
             <div class="instruction">
                 <div class="search-export-instruction-h2 h2">
-                    <span data-bind="text: $root.translations.listItemFourNameThisExport"></span>
+                    <span>3. Name this export</span>
                 </div>
             </div>
             <div class="parameter">
