--- a/src/common/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/common/templates/views/components/map_popup/toggle-map-popup.htm
@@ -29,11 +29,11 @@
     <!-- ko if: resourceinstanceid -->
     <div class="hover-feature-metadata-block">
         <div class="hover-feature-metadata">
-                <span data-bind="text: $root.translations.resourceModel"></span>
+            <span data-bind="text: $root.translations.resourceModel"></span>
             <span data-bind="text: graph_name"></span>
         </div>
         <div class="hover-feature-metadata">
-                <span data-bind="text: $root.translations.idString"></span>
+            <span data-bind="text: $root.translations.idString"></span>
             <span data-bind="text: resourceinstanceid"></span>
         </div>
     </div>
@@ -43,34 +43,43 @@
 <div class="hover-feature-footer">
     <div>
         {% block footer %}
+        {% comment %}
         <!-- ko if: mapCard.showSelectAsFilter && mapCard.showSelectAsFilter(feature) -->
         <a data-bind="if: mapCard.showSelectAsFilter(feature), click: function () {
-            mapCard.selectFeatureAsFilter(feature); }" href="javascript:void(0)">
+                        mapCard.selectFeatureAsFilter(feature); }" href="javascript:void(0)">
             <i class="ion-funnel"></i>
             <span data-bind="text: mapCard.selectText"></span>
         </a>
         <!--/ko-->
+        {% endcomment %}
         <!-- ko if: resourceinstanceid -->
         <a data-bind="click: function () {
-            window.open(reportURL + ko.unwrap(resourceinstanceid));
-        }" href="javascript:void(0)">
+                        window.open(reportURL + ko.unwrap(resourceinstanceid));
+                    }" href="javascript:void(0)">
             <i class="ion-document-text"></i>
             <span data-bind="text: $root.translations.report"></span>
         </a>
         <!--/ko-->
         <!-- ko if:  mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
         <a data-bind="click: function () {
-            window.open(editURL + ko.unwrap(resourceinstanceid));
-        }" href="javascript:void(0)">
+                        window.open(editURL + ko.unwrap(resourceinstanceid));
+                    }" href="javascript:void(0)">
             <i class="ion-ios-refresh-empty"></i>
             <span data-bind="text: $root.translations.edit"></span>
+        </a>
+        <!--/ko-->
+        <!-- ko if: showFilterByFeatureButton -->
+        <a data-bind="click: function() {sendFeatureToMapFilter($data, true);}, visible: showFilterByFeature($data)"
+           href="#" style="padding-right: 2px;">
+            <i class="fa fa-filter"></i>
+            <span data-bind="text: $root.translations.filterByFeature, visible: showFilterByFeature($data)"></span>
         </a>
         <!--/ko-->
     </div>
     <!-- ko if: $parent.popupFeatures.length > 1 -->
     <div style="display: flex; flex-direction: row; width: 60px; justify-content: space-evenly; font-weight: 500;">
         <div class="hover-feature-instance-counter" data-bind="text: 1 + $parent.popupFeatures.findIndex(feature => feature.active());"></div>
-            <span data-bind="text: $root.translations.of"></span>
+        <span data-bind="text: $root.translations.of"></span>
         <div style="padding-left: 3px;" data-bind="text: $parent.popupFeatures.length"></div>
     </div>
     <!--/ko-->
