--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
@@ -8,6 +8,12 @@
         <span data-bind="text: $root.translations.help"></span>
         <i class="fa fa-question-circle"></i>
     </a>
+    <a data-bind="click: function () { showAllFields(!showAllFields()) }, hidden: isAnonymous()"
+       style="cursor:pointer;"
+    >
+        <span data-bind="text: fullViewText"></span>
+        <i class="fa" data-bind="css: {'fa-eye-slash': showAllFields, 'fa-eye': !showAllFields()}"></i>
+    </a>
 </div>
 <div class="data-carousel summary-slider details-site-images" data-bind="descendantsComplete: initCarousel, visible: nodesHaveData(['site_images'])" style="background-color:#f2f2f2;max-width: calc(100vw - 600px);padding:1em">
     <!-- ko let: {widget: getWidgetForAlias('image_date')}-->
@@ -21,21 +27,24 @@
                                                 value: tileValues['image_type'],
                                                 state: 'display_value'
                                             }
-                                        }"></span>
+                                        },
+                                        visible: !!ko.unwrap(tileValues['image_type'])"></span>
                 <span class="separator photo-caption-part" data-bind="visible: !!tileValues['image_type']() && !!tileValues['image_view']()">,</span>
                 <span class="photo-caption-part" data-bind="component: { name: 'concept-select-widget',
                                             params: {
                                                 value: tileValues['image_view'],
                                                 state: 'display_value'
                                             }
-                                        }"></span>
-                <span class="separator photo-caption-part" data-bind="visible: !!tileValues['image_features']() && (!!tileValues['image_view']() || !!tileValues['image_type']())">,</span>
+                                        },
+                                        visible: !!tileValues['image_view']()"></span>
+                <span class="separator photo-caption-part" data-bind="visible: $parent.textHasValue(tileValues['image_features']) && (!!tileValues['image_view']() || !!tileValues['image_type']())">,</span>
                 <span class="photo-caption-part" data-bind="component: {name: 'text-widget',
                                params: {value: ko.unwrap(tileValues['image_features']),
                                         state: 'display_value'
                                         }
-                               }"></span>
-                <span class="separator photo-caption-part" data-bind="visible: !!tileValues['image_features']() && (!!tileValues['image_view']() || !!tileValues['image_type']() || tileValues['image_features']())">,</span>
+                               },
+                               visible: $parent.textHasValue(tileValues['image_features'])"></span>
+                <span class="separator photo-caption-part" data-bind="visible: (!!ko.unwrap(tileValues['image_date']) && ($parent.textHasValue(tileValues['image_features']) || !!tileValues['image_view']() || !!tileValues['image_type']()))">,</span>
                 <span class="photo-caption-part" data-bind="component: { name: 'datepicker-widget',
                                             params: { value: tileValues['image_date'],
                                             node: widget.node,
@@ -43,7 +52,7 @@
                                             }"></span>
             </div>
             <dl class="dl-horizontal">
-            <div data-bind="visible: !!tileValues['copyright']">
+            <div data-bind="visible: $parent.textHasValue(tileValues['copyright'])">
                 <span>Copyright</span>
                 <span data-bind="component: {name: 'text-widget',
                                params: {value: ko.unwrap(tileValues['copyright']),
@@ -65,7 +74,7 @@
     <!-- /ko -->
     <!-- /ko -->
 </div>
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !fullView()}">
     <!-- ko let: {targetSection: 'site_name_section', sectionController: siteNamesVisible} -->
     <span class="rp-tile-title">Site Name</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -102,7 +111,8 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section">
+<!-- ko let: { card: getCardWithName(['Heritage Site Location', 'BC Property Address']) } -->
+<div class="rp-card-section" data-bind="visible: card.tiles().length > 0">
     <!-- ko let: {targetSection: 'site_location_section', sectionController: siteLocationVisible} -->
     <span class="rp-tile-title">Heritage Site Location</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -117,7 +127,6 @@
 
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: inline-flex; width: 100%; justify-content: space-between; flex-direction: column;">
-            <!-- ko let: { card: getCardWithName(['Heritage Site Location', 'BC Property Address']) } -->
             <!-- ko foreach: { data: card.tiles, as: 'tile' } -->
             <div class="card-content-section">
             <dl class="dl-horizontal dl-horizontal-bc"
@@ -134,13 +143,13 @@
             </dl>
             </div>
             <!-- /ko -->
-            <!-- /ko -->
         </div>
     </div>
     <!-- /ko -->
 </div>
+<!-- /ko -->
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !fullView()}">
     <!-- ko let: {targetSection: 'borden_number_section', sectionController: bordenNumberVisible} -->
     <span class="rp-tile-title">Site ID Number</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -222,7 +231,7 @@
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: flex; flex-flow: column; width: 100%; justify-content: space-between;">
             <!-- ko let: {widget: getWidgetForAlias('designation_or_protection_start_date')}-->
-            <!-- ko foreach: { data: getValuesFromTiles(['legislative_act', 'responsible_government', 'designation_or_protection_start_date', 'reference_number']), as: 'values' } -->
+            <!-- ko foreach: { data: getValuesFromTiles(['legislative_act', 'responsible_government', 'designation_or_protection_start_date', 'designation_or_protection_end_date', 'reference_number']), as: 'values' } -->
             <dl class="dl-horizontal">
                 <div class="details-authority-section">
                     <div>
@@ -255,11 +264,20 @@
                     <div>
                         <dt>Recognition Date</dt>
                         <dd>
-                            <div data-bind="component: { name: 'datepicker-widget',
+                            <div style="display: inline-block" data-bind="component: { name: 'datepicker-widget',
                                             params: { value: values['designation_or_protection_start_date'],
                                             node: widget.node,
                                             state: 'display_value' }
                                             }"></div>
+                            <div style="display: inline-block" data-bind="visible: !!ko.unwrap(values['designation_or_protection_end_date'])">
+                                <div style="display: inline-block">-</div>
+                                <div style="display: inline-block" data-bind="component: { name: 'datepicker-widget',
+                                                params: { value: values['designation_or_protection_end_date'],
+                                                node: widget.node,
+                                                state: 'display_value' }
+                                                }"></div>
+
+                            </div>
                         </dd>
                     </div>
                     <div>
@@ -278,7 +296,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}, visible: nodesHaveData(['chronology'])">
+<div class="rp-card-section" data-bind="css: {'hide-section': !fullView()}, visible: nodesHaveData(['chronology'])">
     <!-- ko let: {targetSection: 'chronology_section', sectionController: chronologyVisible} -->
     <span class="rp-tile-title">Chronology</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -311,7 +329,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()},
+<div class="rp-card-section" data-bind="css: {'hide-section': !fullView()},
         visible: nodesHaveData(['significance_type','physical_description','heritage_value','defining_elements','document_location'])">
     <!-- ko let: {targetSection: 'sos_section', sectionController: sosVisible} -->
     <span class="rp-tile-title">Statement of Significance</span>
@@ -326,54 +344,60 @@
             "></i>
 
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
+        <!-- ko foreach: { data: getValuesFromTiles(['significance_type', 'physical_description', 'heritage_value', 'defining_elements','document_location']), as: 'tileValues' } -->
         <div style="display: inline-flex; width: 100%; justify-content: space-between;">
+
             <dl class="dl-horizontal">
-                <div data-bind="visible: !!nodesHaveData(['significance_type'])">
+                <!-- ko if: $index() != 0 --><hr class="rp-tile-separator"/><!-- /ko -->
+
+                <div data-bind="visible: !!tileValues['significance_type']">
                     <dt>Significance Type</dt>
                     <dd data-bind="component: {name: 'concept-select-widget',
-                                        params: {value: getFirstNodeValue('significance_type'),
+                                        params: { value: tileValues['significance_type'],
                                                  state: 'display_value'}
                                     }"></dd>
                 </div>
-                <div data-bind="visible: !!nodesHaveData(['physical_description'])">
+                <div data-bind="visible: !!tileValues['physical_description']">
                     <dt>Description</dt>
                     <dd data-bind="component: {name: 'rich-text-widget',
-                       params: {value: getFirstNodeValue('physical_description'),
+                       params: {value: tileValues['physical_description'],
                                 state: 'display_value',
                                 displayfullvalue: true}
                        }"></dd>
                 </div>
-                <div data-bind="visible: !!nodesHaveData(['heritage_value'])">
+                <div data-bind="visible: !!tileValues['heritage_value']">
                     <dt>Heritage Value</dt>
                     <dd data-bind="component: {name: 'rich-text-widget',
-                       params: {value: getFirstNodeValue('heritage_value'),
+                       params: {value: tileValues['heritage_value'],
                                 state: 'display_value',
                                 displayfullvalue: true}
                        }"></dd>
                 </div>
-                <div data-bind="visible: !!nodesHaveData(['defining_elements'])">
+                <div data-bind="visible: !!tileValues['defining_elements']">
                     <dt>Character Defining Elements</dt>
                     <dd class="print-only" data-bind="component: {name: 'rich-text-widget',
-                       params: {value: getFirstNodeValue('defining_elements'),
+                       params: {value: tileValues['defining_elements'],
                                 state: 'display_value',
                                 displayfullvalue: true}
                        }"></dd>
                 </div>
-                <div data-bind="visible: !!nodesHaveData(['document_location'])">
+                <div data-bind="visible: $parent.textHasValue(tileValues['document_location'])">
+
                     <dt>Document Location</dt>
                     <dd class="print-only" data-bind="component: {name: 'text-widget',
-                       params: {value: ko.unwrap(getFirstNodeValue('document_location')),
+                       params: {value: ko.unwrap(tileValues['document_location']),
                                 state: 'display_value',
                                 displayfullvalue: true}
                        }"></dd>
                 </div>
             </dl>
         </div>
+        <!-- /ko  -->
     </div>
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}, visible: nodesHaveData(['heritage_category','ownership'])">
+<div class="rp-card-section" data-bind="css: {'hide-section': !fullView()}, visible: nodesHaveData(['heritage_category','ownership'])">
     <!-- ko let: {targetSection: 'heritage_class_section', sectionController: heritageClassVisible} -->
     <span class="rp-tile-title">Heritage Class</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -426,7 +450,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()},
+<div class="rp-card-section" data-bind="css: {'hide-section': !fullView()},
                 visible: nodesHaveData(['functional_category','functional_state'])">
     <!-- ko let: {targetSection: 'heritage_function_section', sectionController: heritageFunctionVisible} -->
     <span class="rp-tile-title">Heritage Function</span>
@@ -472,7 +496,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}, visible: nodesHaveData(['heritage_theme'])">
+<div class="rp-card-section" data-bind="css: {'hide-section': !fullView()}, visible: nodesHaveData(['heritage_theme'])">
     <!-- ko let: {targetSection: 'heritage_theme_section', sectionController: heritageThemeVisible} -->
     <span class="rp-tile-title">Heritage Theme</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -504,7 +528,7 @@
     </div>
     <!-- /ko -->
 </div>
-    <div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}, visible: nodesHaveData(['external_url'])">
+    <div class="rp-card-section" data-bind="css: {'hide-section': !fullView()}, visible: nodesHaveData(['external_url'])">
         <!-- ko let: {targetSection: 'external_urls_section', sectionController: externalUrlsVisible} -->
         <span class="rp-tile-title">External URLs</span>
         <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick,
