--- a/src/common/media/css/project_common.css
+++ b/src/common/media/css/project_common.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: 'BCSans';
     font-style: normal;
-    src: url('fonts/BCSans/BCSans-Regular.woff2') format('woff2'), /* Optimized for very modern browsers */
-    url('fonts/BCSans/BCSans-Regular.woff') format('woff'); /* Modern Browsers */
+    src: url('../fonts/BCSans/BCSans-Regular.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('../fonts/BCSans/BCSans-Regular.woff') format('woff'); /* Modern Browsers */
 }
 @font-face {
     font-family: 'BCSans';
     font-style: italic;
-    src: url('fonts/BCSans/BCSans-Italic.woff2') format('woff2'), /* Optimized for very modern browsers */
-    url('fonts/BCSans/BCSans-Italic.woff') format('woff'); /* Modern Browsers */
+    src: url('../fonts/BCSans/BCSans-Italic.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('../fonts/BCSans/BCSans-Italic.woff') format('woff'); /* Modern Browsers */
 }
 @font-face {
     font-family: 'BCSans';
     font-weight: 700;
-    src: url('fonts/BCSans/BCSans-Bold.woff2') format('woff2'), /* Optimized for very modern browsers */
-    url('fonts/BCSans/BCSans-Bold.woff') format('woff'); /* Modern Browsers */
+    src: url('../fonts/BCSans/BCSans-Bold.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('../fonts/BCSans/BCSans-Bold.woff') format('woff'); /* Modern Browsers */
 }
 @font-face {
     font-family: 'BCSans';
     font-style: italic;
     font-weight: 700;
-    src: url('fonts/BCSans/BCSans-BoldItalic.woff2') format('woff2'), /* Optimized for very modern browsers */
-    url('fonts/BCSans/BCSans-BoldItalic.woff') format('woff'); /* Modern Browsers */
+    src: url('../fonts/BCSans/BCSans-BoldItalic.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('../fonts/BCSans/BCSans-BoldItalic.woff') format('woff'); /* Modern Browsers */
 }
 
 #main-content
@@ -51,6 +51,7 @@ body, h1, h2, h3, h4, h5
     height: unset !important;
     min-height: 4.6em !important;
     max-height: 8em !important;
+    -webkit-line-clamp: unset;
 }
 
 .bc-report-title {
