1174 - Interim commit of Vue framework (needs work)

--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -1,6 +1,10 @@
 @import "project_common.css";
 @import "map_legend.css";
 
+#bcfms-mounting-point {
+   font-size: 0.8rem;
+}
+
 /* Details tab rules */
 dl.geological-age > dd > div,
 dl.stratigraphy > dd > div.stratigraphy-level > div
