--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -1,9 +1,31 @@
 @import "project_common.css";
 @import "map_legend.css";
 
+/* Vue schtuff */
 #bcfms-mounting-point {
    font-size: 0.8rem;
 }
+
+.bcgov-vertical-steps > .p-steplist {
+   flex-direction: column;
+   align-items: flex-start;
+}
+
+.bcgov-vertical-step-panels {
+   height:100%;
+   width: 100%;
+}
+
+.bcgov-main-content .p-panel {
+   background-color: var(--p-panel-background) !important;
+}
+
+.bcgov-stepper {
+   display: flex;
+   flex-direction: row;
+}
+
+/* End Vue schtuff */
 
 /* Details tab rules */
 dl.geological-age > dd > div,
