1174 - Name dashboard URL and add to homepage

--- a/src/bcfms/bcfms/templates/arches_urls.htm
+++ b/src/bcfms/bcfms/templates/arches_urls.htm
@@ -9,6 +9,7 @@
 <div class="arches-urls"
      api_user="{% url 'api_user' %}"
      user_profile_manager="{% url 'user_profile_manager' %}">
+     dashboard="{% url 'dashboard' %}">
 </div>
 
 {% endblock arches_urls %}
