--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -1,7 +1,7 @@
 @import "project_common.css";
 @import "map_legend.css";
-@import "fontawesome/css/fontawesome.min.css";
-@import "fontawesome/css/solid.min.css";
+@import "../fontawesome/css/fontawesome.min.css";
+@import "../fontawesome/css/solid.min.css";
 @import "resource_details.css";
 
 .card_component.start_year, .card_component.end_year, .card_component.dates_approximate {
