--- a/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
@@ -11,17 +11,17 @@
 <!-- ko if: !loading() -->
 <!-- ko foreach: popupFeatures -->
 <!-- ko if: active -->
-<!-- ko if: displayname -->
 <div class="hover-feature-title-bar">
     {% block title %}
     <div style="display: flex;">
         <div data-bind="visible: $parent.popupFeatures.length > 1, click: function(){$parent.advanceFeature('left')}" class="hover-feature-nav-left"><i class="fa fa-angle-left"></i></div>
         <div data-bind="visible: $parent.popupFeatures.length > 1, click: function(){$parent.advanceFeature('right')}" class="hover-feature-nav-right"><i class="fa fa-angle-right"></i></div>
+        <!-- ko if: displayname -->
         <div class="hover-feature-title" data-bind="text: displayname"></div>
+        <!--/ko-->
     </div>
     {% endblock title %}
 </div>
-<!--/ko-->
 <div class="hover-feature-body">
     {% block body %}
     <div class="hover-feature" data-bind="style: {'-webkit-line-clamp': showAll() ? '12' : '4', 'overflow-y': showAll() ? 'scroll' : 'hidden'}, html: map_popup"></div>
@@ -29,11 +29,11 @@
     <!-- ko if: resourceinstanceid -->
     <div class="hover-feature-metadata-block">
         <div class="hover-feature-metadata">
-                <span data-bind="text: $root.translations.resourceModel"></span>
+            <span data-bind="text: $root.translations.resourceModel"></span>
             <span data-bind="text: graph_name"></span>
         </div>
         <div class="hover-feature-metadata">
-                <span data-bind="text: $root.translations.idString"></span>
+            <span data-bind="text: $root.translations.idString"></span>
             <span data-bind="text: resourceinstanceid"></span>
         </div>
     </div>
@@ -43,13 +43,15 @@
 <div class="hover-feature-footer">
     <div>
         {% block footer %}
+        {% comment %}
         <!-- ko if: mapCard.showSelectAsFilter && mapCard.showSelectAsFilter(feature) -->
         <a data-bind="if: mapCard.showSelectAsFilter(feature), click: function () {
-            mapCard.selectFeatureAsFilter(feature); }" href="javascript:void(0)">
+                        mapCard.selectFeatureAsFilter(feature); }" href="javascript:void(0)">
             <i class="ion-funnel"></i>
             <span data-bind="text: mapCard.selectText"></span>
         </a>
         <!--/ko-->
+        {% endcomment %}
         <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) -->
         <a data-bind="click: function () {
             mapCard.showDetailsFromFilter(ko.unwrap(resourceinstanceid)); }" href="javascript:void(0)">
@@ -59,25 +61,32 @@
         <!--/ko-->
         <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
         <a data-bind="click: function () {
-            window.open(reportURL + ko.unwrap(resourceinstanceid));
-        }" href="javascript:void(0)">
+                        window.open(reportURL + ko.unwrap(resourceinstanceid));
+                    }" href="javascript:void(0)">
             <i class="ion-document-text"></i>
             <span data-bind="text: $root.translations.report"></span>
         </a>
         <!--/ko-->
         <!-- ko if:  mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
         <a data-bind="click: function () {
-            window.open(editURL + ko.unwrap(resourceinstanceid));
-        }" href="javascript:void(0)">
+                        window.open(editURL + ko.unwrap(resourceinstanceid));
+                    }" href="javascript:void(0)">
             <i class="ion-ios-refresh-empty"></i>
             <span data-bind="text: $root.translations.edit"></span>
+        </a>
+        <!--/ko-->
+        <!-- ko if: showFilterByFeatureButton -->
+        <a data-bind="click: function() {sendFeatureToMapFilter($data, true);}, visible: showFilterByFeature($data)"
+           href="#" style="padding-right: 2px;">
+            <i class="fa fa-filter"></i>
+            <span data-bind="text: $root.translations.filterByFeature, visible: showFilterByFeature($data)"></span>
         </a>
         <!--/ko-->
     </div>
     <!-- ko if: $parent.popupFeatures.length > 1 -->
     <div style="display: flex; flex-direction: row; width: 60px; justify-content: space-evenly; font-weight: 500;">
         <div class="hover-feature-instance-counter" data-bind="text: 1 + $parent.popupFeatures.findIndex(feature => feature.active());"></div>
-            <span data-bind="text: $root.translations.of"></span>
+        <span data-bind="text: $root.translations.of"></span>
         <div style="padding-left: 3px;" data-bind="text: $parent.popupFeatures.length"></div>
     </div>
     <!--/ko-->
