1146 - Fix css 404s, use arches core slick assets 1081 - Add common css to .gitignore

--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -44,8 +44,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <link href="{% webpack_static 'css/unify.css' %}" rel="stylesheet">
 <!--    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">-->
 
-    <link href="{% webpack_static 'css/fontawesome/css/fontawesome.min.css' %}" rel="stylesheet">
-    <link href="{% webpack_static 'css/fontawesome/css/solid.min.css' %}" rel="stylesheet">
+    <link href="{% webpack_static 'fontawesome/css/fontawesome.min.css' %}" rel="stylesheet">
+    <link href="{% webpack_static 'fontawesome/css/solid.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% webpack_static 'plugins/slick/slick.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% webpack_static 'plugins/slick/accessible-slick-theme.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% webpack_static 'css/index.css' %}">
