1146 - Fix site details page for new card/node/widget structure

--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
@@ -314,7 +314,7 @@
             <!-- ko foreach: { data: getTilesForAlias('chronology'), as: 'tile' } -->
             <!-- ko component: { name: 'significant-event-widget',
                                  params: {
-                                     card: $parent.getWidgetForAlias('chronology').card,
+                                     card: $parent.getCardForAlias('chronology'),
                                      tile: tile,
                                      value: tile.data,
                                      state: 'display_value',
