--- a/src/bcfms/bcfms/templates/index.htm
+++ b/src/bcfms/bcfms/templates/index.htm
@@ -159,13 +159,13 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             </div>
 
             <!-- Splash Screen -->
-            <div class="fullscreenbanner-container">
+            <div class="fullscreenbanner-container bc-full-height-image">
                 <div class="fullscreenbanner">
                     <ul>
                         <!-- SLIDE 1 -->
                         <li data-transition="fade" data-slotamount="9" data-masterspeed="0" data-title="Slide 1">
                             <!-- MAIN IMAGE -->
-                            <img src="{% webpack_static 'img/front/mcabee.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+                            <img src="{% webpack_static 'img/front/mcabee.jpg' %}"  alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
                             <!-- NEW LAYER -->
                             <div class="tp-caption sft start text-bold bc-splash-caption" delay="4500" data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300" data-x="0">
