1203 - First cut at moving common assets to separate application dev - Run settings through black

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -1,5 +1,4 @@
-@import "project_common.css";
-@import "map_legend.css";
+@import url("node_modules/bcgov_arches_common/bcgov_arches_common/media/css/project.css");
 @import "../fontawesome/css/fontawesome.min.css";
 @import "../fontawesome/css/solid.min.css";
 @import "resource_details.css";
