1203 - Add missing css import

--- a/src/bcrhp/bcrhp/media/css/project.css
+++ b/src/bcrhp/bcrhp/media/css/project.css
@@ -1,4 +1,5 @@
 @import url("node_modules/bcgov_arches_common/bcgov_arches_common/media/css/project.css");
+@import "map_legend.css";
 @import "../fontawesome/css/fontawesome.min.css";
 @import "../fontawesome/css/solid.min.css";
 @import "resource_details.css";
