1219 - Add Arches Core and BCFMS versions to the splash page

--- a/src/bcfms/bcfms/templates/index.htm
+++ b/src/bcfms/bcfms/templates/index.htm
@@ -49,6 +49,22 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     {% if app_settings.ACCESSIBILITY_MODE %}
     <link href="{% webpack_static 'css/accessibility.css' %}" rel="stylesheet">
     {% endif %}
+    <style>
+        a > div.arches_version:hover {
+            text-decoration: none !important;
+            color: #337ab7 !important;
+        }
+        a > div.arches_version, .bcfms_version {
+            display: inline-block;
+            font-size: .45rem;
+            position: absolute;
+            right: 5px;
+            margin-top: -2px;
+        }
+        .bcfms_version {
+            color: #66adda;
+        }
+    </style>
 </head>
 
 <body>
@@ -305,6 +321,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 <footer class="footer">
     <div class="arches_footer">
         <a class="arches_link" target="archesproject" href="https://archesproject.org" >
+            <div class="arches_version">Arches Core Version: {{ app_settings.VERSION }}</div>
             <img class="arches_logo"
                  src="{% webpack_static 'img/logo/arches/Arches_badge_white_powered_by_2.png' %}" alt="Powered by Arches logo">
         </a>
@@ -321,6 +338,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                 <li><a href="https://www2.gov.bc.ca/gov/content/home/get-help-with-government-services" target="_blank">Contact Us</a></li>
             </ul>
         </div>
+        <div class="bcfms_version">BCFMS Version: {{ app_settings.APP_VERSION }}</div>
     </div>
 </footer>
 <!-- End Footer -->
