1214 - Split the WEBPACK and PUBLIC URLS in the settings.py

--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -44,7 +44,9 @@ AUTH_BYPASS_HOSTS={{ auth_bypass_hosts }}
 BCGOV_PROXY_PREFIX=
 
 # Used by webpack for data export
-PUBLIC_SERVER_ADDRESS={{ arches_webpack_internal_url }}/{{ url_context_root }}
+WEBPACK_SERVER_ADDRESS={{ arches_webpack_internal_url }}/{{ url_context_root }}
+# Used to generate links back into the system
+PUBLIC_SERVER_ADDRESS={{ arches_app_public_url }}/{{ url_context_root }}
 
 #rabbitmq
 # RABBITMQ_USER=guest
