--- a/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
@@ -52,14 +52,14 @@
         </a>
         <!--/ko-->
         {% endcomment %}
-        <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) -->
+        <!-- ko if: resourceinstanceid -->
         <a data-bind="click: function () {
             mapCard.showDetailsFromFilter(ko.unwrap(resourceinstanceid)); }" href="javascript:void(0)">
             <i class="fa fa-info-circle"></i>
             <span>Details</span>
         </a>
         <!--/ko-->
-        <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
+        <!-- ko if: resourceinstanceid && showEditButton -->
         <a data-bind="click: function () {
                         window.open(reportURL + ko.unwrap(resourceinstanceid));
                     }" href="javascript:void(0)">
@@ -67,7 +67,7 @@
             <span data-bind="text: $root.translations.report"></span>
         </a>
         <!--/ko-->
-        <!-- ko if:  mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
+        <!-- ko if:  resourceinstanceid && showEditButton -->
         <a data-bind="click: function () {
                         window.open(editURL + ko.unwrap(resourceinstanceid));
                     }" href="javascript:void(0)">
