--- a/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/map_popup/toggle-map-popup.htm
@@ -50,7 +50,7 @@
             <span>Details</span>
         </a>
         <!--/ko-->
-        <!-- ko if: mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
+        <!-- ko if: ko.unwrap(resourceinstanceid) && showEditButton -->
         <a data-bind="click: function () {
                         window.open(reportURL + ko.unwrap(resourceinstanceid));
                     }" href="javascript:void(0)">
@@ -58,7 +58,7 @@
             <span data-bind="text: $root.translations.report"></span>
         </a>
         <!--/ko-->
-        <!-- ko if:  mapCard.isArchesResource && mapCard.isArchesResource(feature) && showEditButton -->
+        <!-- ko if: ko.unwrap(resourceinstanceid) && showEditButton -->
         <a data-bind="click: function () {
                         window.open(editURL + ko.unwrap(resourceinstanceid));
                     }" href="javascript:void(0)">
