Bcfms/release/1.1.0 rebase (#88)
* 1084 - Interim commit - docker configuration update

* 1084 - Interim commit - BCFMS migration

* 1084 - Add copy of arches core base search view for long URL update

* 1120 - Add migration to set missing feature IDs introduced in 7.6.0

* 1120 - Interim commit of 7.6 map-filter update

* 1120 - Reintroduce multiple geometries in new search framework

* 1125 - Add MVT tiler for updates

* 1125 - Update MVT tiler extension for 7.6 updates
1120 - Re-enable multi-geometry filter
1146 - Update to search results card CSS, move fonts directory

* 1084 - Update core to 7.6.3, remove redundant shpjsesm path
1120 - Fix GET/POST logic for large filters, update custom search config and class reference for 7.6

* 1146 - Fix details tabs - 7.6 API data structure changes

* 1082 - Add missing vite, tsconfig & pyproject files

* 1082 - Update core to 7.6.3

* 1081 - Initial commit of BCRHP 7.6.3 upgrade

* 1081 - Fix docker hostnames

* 1168 - Fix chronology index
1170 - Create baseline copy of view, materialized view and function SQL, and add process to handle 7.6.x upgrade.
dev - Add 1.3.0 readme

* 1081 - Add result of updateproject

* 1082 - Add missing files produced by updateproject

* 1125 - Fixed cluster query

* 1082 - Add readme

* 1081 - Initial commit of BCRHP 7.6.3 upgrade

* 1081 - Fix docker hostnames

* 1168 - Fix chronology index
1170 - Create baseline copy of view, materialized view and function SQL, and add process to handle 7.6.x upgrade.
dev - Add 1.3.0 readme

* 1081 - Add result of updateproject

* 1125 - Fixed cluster query

* 1170 - Move migration SQL scripts to seperate files, add util file, refactor map data migration to use new framework

* 1082 - Fixed migration dependencies for core models migrations, updated readme

* 1082 - Added missing files to src, added workaround to failing ts check

* 1082 - Revert invalid resource view commit.

* 1082 - Add missi

--- a/src/bcfms/bcfms/templates/index.htm
+++ b/src/bcfms/bcfms/templates/index.htm
@@ -39,10 +39,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <link rel="shortcut icon" href="{% webpack_static 'img/favicon.png' %}" />
 
     <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% webpack_static 'node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
 
-    <link href="{% webpack_static 'css/unify.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% webpack_static 'node_modules/font-awesome/css/font-awesome.min.css'%}">
+
     <link href="{% webpack_static 'css/index.css' %}" rel="stylesheet">
     <link href="{% webpack_static 'css/project.css' %}" rel="stylesheet">
     <link href="{% webpack_static 'css/bc_index.css' %}" rel="stylesheet">
@@ -159,13 +159,13 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
             </div>
 
             <!-- Splash Screen -->
-            <div class="fullscreenbanner-container">
+            <div class="fullscreenbanner-container bc-full-height-image">
                 <div class="fullscreenbanner">
                     <ul>
                         <!-- SLIDE 1 -->
                         <li data-transition="fade" data-slotamount="9" data-masterspeed="0" data-title="Slide 1">
                             <!-- MAIN IMAGE -->
-                            <img src="{% webpack_static 'img/front/mcabee.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+                            <img src="{% webpack_static 'img/front/mcabee.jpg' %}"  alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                             <!-- LAYERS -->
                             <!-- NEW LAYER -->
                             <div class="tp-caption sft start text-bold bc-splash-caption" delay="4500" data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300" data-x="0">
@@ -305,6 +305,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 <footer class="footer">
     <div class="arches_footer">
         <a class="arches_link" target="archesproject" href="https://archesproject.org" >
+            <div class="arches_version">Arches Core Version: {{ app_settings.VERSION }}</div>
             <img class="arches_logo"
                  src="{% webpack_static 'img/logo/arches/Arches_badge_white_powered_by_2.png' %}" alt="Powered by Arches logo">
         </a>
@@ -321,6 +322,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                 <li><a href="https://www2.gov.bc.ca/gov/content/home/get-help-with-government-services" target="_blank">Contact Us</a></li>
             </ul>
         </div>
+        <div class="project_version">BCFMS Version: {{ app_settings.APP_VERSION }}</div>
     </div>
 </footer>
 <!-- End Footer -->
